--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -311,7 +311,7 @@ div
 	flex-wrap: wrap
 	justify-content: center
 	align-items: center
-	padding: 6px 24px 9px 18px
+	padding: 8px 20px
 	cursor: pointer
 	&:hover
 		color: #FFFFFF
@@ -936,7 +936,7 @@ div
 	left: 242px
 
 .section-number_tags
-	margin-top: -86px
+	margin-top: -46px
 	margin-bottom: 89px
 
 .tags__title
@@ -960,7 +960,7 @@ div
 
 .tags__small-title
 	position: absolute
-	top: 258px
+	top: 295px
 	left: 290px
 	font-weight: 100
 	font-size: 30px
@@ -977,15 +977,15 @@ div
 	background-image: url("../images/tags-gadget-1.png")
 	width: 254px
 	height: 516px
-	top: 389px
-	left: 97px
+	top: 407px
+	left: 117px
 
 .tags-gadget_2
 	background-image: url("../images/tags-gadget-2.png")
 	width: 201px
 	height: 572px
-	top: 350px
-	left: 278px
+	top: 367px
+	left: 298px
 
 .text-orange
 	color: #ff6000
@@ -993,7 +993,7 @@ div
 .tags-descr
 	position: absolute
 	width: 360px
-	top: 406px
+	top: 444px
 	right: 135px
 	text-align: left
 
@@ -1105,7 +1105,7 @@ div
 
 .conclusion__rostelcom
 	position: absolute
-	top: 855px
+	top: 841px
 	left: 409px
 	width: 221px
 	height: 65px
