--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,4 @@
+@import url(../css/fonts.css);
 .mb10 {
   margin-bottom: 10px;
 }
@@ -383,8 +384,8 @@ div {
   background: url("../images/general-circle-orange.png");
   position: absolute;
   border-radius: 50%;
-  width: 180px;
-  height: 182px;
+  width: 185px;
+  height: 185px;
   top: 188px;
   left: 80px;
 }
@@ -1016,7 +1017,6 @@ div {
 .collection {
   height: 962px;
   background-color: #f9f9f9;
-  z-index: 10;
 }
 
 .collection__paragraph {
@@ -1040,6 +1040,7 @@ div {
   width: 334px;
   height: 650px;
   left: 97px;
+  z-index: 10;
 }
 
 .collection__screen {
@@ -1047,6 +1048,7 @@ div {
   background-repeat: no-repeat;
   height: 635px;
   top: 71px;
+  z-index: 10;
 }
 
 .collection__screen_1 {
@@ -1061,6 +1063,7 @@ div {
   background-image: url("../images/collection-screen-2.png");
   width: 405px;
   left: 372px;
+  top: 72px;
 }
 
 .collection__screen_3 {
@@ -1068,6 +1071,7 @@ div {
   background-image: url("../images/collection-screen-3.png");
   width: 429px;
   left: 529px;
+  top: 72px;
 }
 
 .collection__price {
@@ -1088,6 +1092,7 @@ div {
   top: 194px;
   left: 54px;
   border-radius: 5px;
+  z-index: 20;
 }
 
 .collection__rating {
@@ -1109,6 +1114,7 @@ div {
   left: 54px;
   border-radius: 5px;
   padding: 0 27px 0 20px;
+  z-index: 20;
 }
 
 .fri-star {
@@ -1149,12 +1155,38 @@ div {
   height: 99px;
 }
 
+.collection-big-circle {
+  position: absolute;
+  width: 874px;
+  height: 874px;
+  border-radius: 50%;
+  border: 1px solid #e0e0e0;
+  background: transparent;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  top: 630px;
+  left: -130px;
+}
+
+.collection-small-circle {
+  position: relative;
+  width: 597px;
+  height: 597px;
+  border-radius: 50%;
+  border: 1px solid #e0e0e0;
+  background: transparent;
+}
+
 .my-collection {
   background-color: #e0e5e8;
   padding-top: 130px;
   height: 724px;
   position: relative;
-  z-index: 10;
+  z-index: 2;
 }
 
 .my-collection-wrapper {
@@ -1303,11 +1335,10 @@ div {
 }
 
 .my-collection__circle-blue {
+  background: url("../images/my-collection-circle-blue.png");
   position: absolute;
-  border-radius: 50%;
-  background-color: #00a8ff;
-  width: 204px;
-  height: 204px;
+  width: 286px;
+  height: 286px;
   bottom: 53px;
   right: 93px;
 }
@@ -1343,6 +1374,7 @@ div {
 }
 
 .tags__title {
+  visibility: visible !important;
   font-size: 94.92px;
   font-weight: 900;
   text-align: center;
@@ -1450,25 +1482,33 @@ div {
   line-height: 1.1;
 }
 
-.conclusion__circle-big {
+.conclusion-circles-wrapper {
   position: absolute;
+  top: 45px;
+  left: 145px;
+}
+
+.conclusion__circle-big {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 874px;
   height: 874px;
   border-radius: 50%;
   border: 1px solid #FFFFFF;
   opacity: 0.3;
-  top: 45px;
-  left: 145px;
 }
 
 .conclusion__circle-small {
-  position: absolute;
+  position: relative;
   border-radius: 50%;
   border: 1px solid #e0e0e0;
   width: 597px;
   height: 597px;
-  top: 185px;
-  left: 285px;
 }
 
 .conlcusion__all {
