--- a/app/twig/layouts/scripts.twig
+++ b/app/twig/layouts/scripts.twig
@@ -7,5 +7,6 @@
 <!--endbuild-->
 
 <!--build:js js/common.js-->
+<script src="PP/PP.js"></script>
 <script src="js/app.js"></script>
 <!--endbuild-->
