--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -26,6 +26,7 @@ div
 
 .vsetv-wrapper
 	width: 100%
+	min-width: 1200px
 	position: relative
 	z-index: 10
 	display: flex
@@ -787,7 +788,7 @@ div
 	width: 874px
 	height: 874px
 	border-radius: 50%
-	border: 1px solid #e0e0e0
+	border: 1px solid rgba(#e0e0e0, 0.5)
 	background: transparent
 	display: flex
 	align-items: center
@@ -800,7 +801,7 @@ div
 	width: 597px
 	height: 597px
 	border-radius: 50%
-	border: 1px solid #e0e0e0
+	border: 1px solid rgba(#e0e0e0, 0.5)
 	background: transparent
 
 .my-collection
