--- a/app/css/app.css
+++ b/app/css/app.css
@@ -242,6 +242,7 @@ div {
 
 .vsetv-wrapper {
   width: 100%;
+  min-width: 1200px;
   position: relative;
   z-index: 10;
   display: -ms-flexbox;
@@ -1160,7 +1161,7 @@ div {
   width: 874px;
   height: 874px;
   border-radius: 50%;
-  border: 1px solid #e0e0e0;
+  border: 1px solid rgba(224, 224, 224, 0.5);
   background: transparent;
   display: -ms-flexbox;
   display: flex;
@@ -1177,7 +1178,7 @@ div {
   width: 597px;
   height: 597px;
   border-radius: 50%;
-  border: 1px solid #e0e0e0;
+  border: 1px solid rgba(224, 224, 224, 0.5);
   background: transparent;
 }
 
