--- a/app/css/app.css
+++ b/app/css/app.css
@@ -315,6 +315,14 @@ div {
   display: block;
 }
 
+.default-link {
+  color: #0494dd;
+  text-decoration: underline;
+}
+.default-link:hover {
+  text-decoration: none;
+}
+
 .flex-column {
   -ms-flex-direction: column;
   flex-direction: column;
@@ -1161,7 +1169,7 @@ div {
   width: 874px;
   height: 874px;
   border-radius: 50%;
-  border: 1px solid rgba(224, 224, 224, 0.5);
+  border: 1px solid rgba(224, 224, 224, 0.3);
   background: transparent;
   display: -ms-flexbox;
   display: flex;
@@ -1353,8 +1361,7 @@ div {
   width: 874px;
   height: 874px;
   border-radius: 50%;
-  border: 1px solid #e0e0e0;
-  opacity: 0.3;
+  border: 1px solid rgba(224, 224, 224, 0.3);
   top: -215px;
   left: 105px;
 }
@@ -1362,7 +1369,7 @@ div {
 .tags-gray-circle-small {
   position: absolute;
   border-radius: 50%;
-  border: 1px solid #e0e0e0;
+  border: 1px solid rgba(224, 224, 224, 0.5);
   width: 597px;
   height: 597px;
   top: -75px;
@@ -1500,8 +1507,7 @@ div {
   width: 874px;
   height: 874px;
   border-radius: 50%;
-  border: 1px solid #FFFFFF;
-  opacity: 0.3;
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .conclusion__circle-small {
