--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -82,6 +82,13 @@ div
 .display-block
 	display: block
 
+.default-link
+	color: #0494dd
+	text-decoration: underline
+	&:hover
+		text-decoration: none
+
+
 .flex-column
 	flex-direction: column
 
@@ -788,7 +795,7 @@ div
 	width: 874px
 	height: 874px
 	border-radius: 50%
-	border: 1px solid rgba(#e0e0e0, 0.5)
+	border: 1px solid rgba(#e0e0e0, 0.3)
 	background: transparent
 	display: flex
 	align-items: center
@@ -948,15 +955,14 @@ div
 	width: 874px
 	height: 874px
 	border-radius: 50%
-	border: 1px solid #e0e0e0
-	opacity: 0.3
+	border: 1px solid rgba(#e0e0e0, 0.3)
 	top: -215px
 	left: 105px
 
 .tags-gray-circle-small
 	position: absolute
 	border-radius: 50%
-	border: 1px solid #e0e0e0
+	border: 1px solid rgba(#e0e0e0, 0.5)
 	width: 597px
 	height: 597px
 	top: -75px
@@ -1071,8 +1077,7 @@ div
 	width: 874px
 	height: 874px
 	border-radius: 50%
-	border: 1px solid #FFFFFF
-	opacity: 0.3
+	border: 1px solid rgba(#FFFFFF, 0.3)
 
 .conclusion__circle-small
 	position: relative
