--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -45,7 +45,7 @@
                     </p>
                     <div class="mb18"><span class="tasks-grid-item__title">Клиент</span></div>
                     <p class="tasks-grid-item__paragraph mb35">
-                        Компания iBecom — разработчик продуктов и решений в области микролокаций и indoor-навигации. <a href="www.espley.ru" target="_blank">www.espley.ru</a>
+                        Компания iBecom — разработчик продуктов и решений в области микролокаций и indoor-навигации. <a clas="default-link" href="www.espley.ru" target="_blank">www.espley.ru</a>
                     </p>
                 </div>
                 <div class="tasks-grid__item tasks-grid__item_w400 tasks-grid-item">
