--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1102,6 +1102,7 @@ div {
   left: 54px;
   border-radius: 5px;
   z-index: 20;
+  box-shadow: -10px 3px 40px 0px rgba(0, 0, 0, 0.15);
 }
 
 .collection__rating {
@@ -1124,6 +1125,7 @@ div {
   border-radius: 5px;
   padding: 0 27px 0 20px;
   z-index: 20;
+  box-shadow: -10px 3px 40px 0px rgba(0, 0, 0, 0.15);
 }
 
 .fri-star {
