--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -738,6 +738,7 @@ div
 	left: 54px
 	border-radius: 5px
 	z-index: 20
+	box-shadow: -10px 3px 40px 0px rgba(0,0,0,0.15)
 
 .collection__rating
 	position: absolute
@@ -756,6 +757,7 @@ div
 	border-radius: 5px
 	padding: 0 27px 0 20px
 	z-index: 20
+	box-shadow: -10px 3px 40px 0px rgba(0,0,0,0.15)
 
 .fri-star
 	margin-right: 10px
