--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -180,11 +180,9 @@
     <div class="vset-tv-tags jq-element-wrapper" data-element-container="tags">
         <div class="container">
             <div class="section-number section-number_tags">3</div>
-            <div class="tags__title wow bounceIn jq-element" data-element="tags" data-wow-delay="" data-wow-offset="" data-wow-duration="1.2s">
-                <div class="wow pulse jq-element" data-element="tags" data-wow-duration="0.5s" data-wow-delay="1s" data-wow-iteration="1" data-wow-offset="">
-                    <span class="tags__title-text-orange">#Теги-</span>
-                    <span class="tags__title-text-blue">настроения</span>
-                </div>
+            <div class="tags__title wow pulse jq-element" data-element="tags" data-wow-duration="0.5s" data-wow-delay="1s" data-wow-iteration="3" data-wow-offset="">
+                <span class="tags__title-text-orange">#Теги-</span>
+                <span class="tags__title-text-blue">настроения</span>
             </div>
             <div class="tags__small-title">создали особую систему тегирования</div>
             <div class="tags-gray-circle-big"></div>
