--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -565,35 +565,34 @@ div
 	position: relative
 	width: 1500px
 	height: 647px
-	margin: 0 auto
 	display: flex
+	margin-top: 140px
+	margin-left: -250px
 
 .tv-guide__image
-	position: absolute
-	top: 0
+	flex-shrink: 0
 	background-color: transparent
 	background: url('../images/tv-guide-1.png') no-repeat
 
 .tv-guide__image_1
 	background-image: url('../images/tv-guide-1.png')
-	top: 98px
-	left: 4px
 	width: 981px
 	height: 644px
+	margin-left: 0
 
 .tv-guide__image_2
 	background-image: url('../images/tv-guide-2.png')
-	left: 258px
-	top: 69px
 	width: 978px
 	height: 643px
+	margin-left: -710px
+	margin-top: -19px
 
 .tv-guide__image_3
 	background-image: url('../images/tv-guide-3.png')
-	left: 507px
-	top: 39px
 	width: 986px
 	height: 647px
+	margin-left: -730px
+	margin-top: -49px
 
 .arrow
 	font-family: "PT Sans"
@@ -606,7 +605,7 @@ div
 
 .arrow_1
 	position: absolute
-	bottom: 50px
+	bottom: 150px
 	left: 258px
 	&::after
 		position: absolute
@@ -627,8 +626,8 @@ div
 
 .arrow_2
 	position: absolute
-	top: 23px
-	left: 728px
+	top: -60px
+	left: 735px
 	width: 85px
 	&::after
 		position: absolute
@@ -649,8 +648,8 @@ div
 
 .arrow_3
 	position: absolute
-	top: 0
-	right: 236px
+	top: -86px
+	right: 224px
 	width: 200px
 	&::after
 		position: absolute
@@ -947,7 +946,8 @@ div
 	width: 286px
 	height: 286px
 	bottom: 53px
-	right: 93px
+	right: 50%
+	margin-right: -900px
 
 .vset-tv-tags
 	height: 1079px
